@@ -1,3 +1,8 @@
+2008-07-08  Filippo Argiolas  <pippo@tux>
+
+	* gst/gl/gstgleffects.c:
+	Fix build with iso c90 (mixed code and declarations)
+
 2008-07-08  Filippo Argiolas <filippo.argiolas@gmail.com>
 	* gst/gl/gstgleffects.c:
 	* gst/gl/gstgleffectsources.c:
